src/index.css
html, body, p {
  margin: 0;
  padding: 0;
}

body {
  margin: 20px;
  padding: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-image: linear-gradient(to bottom, #6EEEFF, #A850D8);
}

a:hover {
  text-decoration: none;
}

img {
  max-width: 100%;
}

.card {
  background-image: linear-gradient(to bottom, #6EEEFF, #A850D8);
  box-shadow: 0px 10px 8px #A850D8;
  border: 0;
  padding: 20px;
}

h1, h2, h3, h4, h5, h6 {
  color: #fdfeec;
  font-family: 'Allerta Stencil';
  font-weight: 700;
}

.thin {
  font-weight: 100;
}

h2 {
  font-size: 18px;
  font-weight: 700px;
}

.labels_container {
  margin-left: auto;
  margin-right: auto;
}

.labels_container > row {
  margin-left: auto;
  margin-right: auto;
}

.label_container {
  margin: 50px;
}

.label {
  /* align-items: center; */
  /* flex: 1; */
  height: 100px;
  justify-content: center;
  text-align: center;
}

.banner {
  min-height: 600px;
  display: flex;
  justify-content: space-between;
  padding: 60px;
  z-index: -1;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.menu-item {
  cursor: pointer;
}

.labels_container {
  text-align: center;
}

.pursuit {
  align-items: center;
  margin: 10;
  padding: 20;
  background-color: red;
}

.pursuit .outBtn {
  align-items: center;
  align-self: flex-end;
  background-color: #fdfeec;
  border-radius: 50px;
  color: black;
  display: flex;
  height: 40px;
  justify-content: center;
  text-decoration: none;
  width: 40px;
}

.rec {
  display: flex;
  justify-content: center;
  margin-bottom: 50px;
  /* min-height: 300px; */
}

.rec-date {
  font-size: 12px;
  font-weight: 300;
  position: absolute;
  top: 30px;
  left: 30px;
}

.rec-text {
  align-text: center;
  margin-right: 300px;
  padding: 100px;
}

.rec-attr {
  align-items: center;
  background-color: white;
  border-radius: 25px;
  box-shadow: 2px 3px 15px #666;
  display: flex;
  float: right;
  height: 100%;
  max-height: 250px;
  min-width: 300px;
  justify-content: center;
  padding: 40px;
  position: absolute;
  right: -40px;
  text-align: center;
}

#hey {
  font-size: 160px;
  margin-left: 80px;
}

#clayton {
  text-align: center;
}

#pic {
  background-color: #83ECEF;
  border-radius: 50%;
  box-shadow: 0px 2px 50px -10px #A850D8;
  margin-left: auto;
  margin-right: auto;
  width: 250px;
}

#iconsContainer {
  display: flex;
  justify-content: space-evenly;
  text-align: center;
}

@media (min-width: 1024px) {
  body {
    margin: 20px 100px;
  }

  .banner {
    top: -300px;
  }

  #pic {
    margin-right: -25px;
    width: 350px;
  }

  #iconsContainer {
    margin-left: auto;
    margin-right: auto;
    min-width: 600px;
  }
}


/* iPads (portrait) ----------- */
@media (max-width : 1024px) {

  h1 {
    font-size: 24px;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
  }

  #hey {
    font-size: 64px;
    margin-left: auto;
    margin-right: auto;
  }

  .banner {
    margin-top: -70px;
    min-height: 500px;
    padding-top: 100px;
    z-index: -1;
  }

  .rec {
    margin-bottom: 80px;
    padding: 0px;
  }

  .rec-attr {
    align-items: center;
    height: 100%;
    margin-left: auto;
    margin-right: auto;
    position: relative;
    right: 0;
    text-align: center;
    top: 40px;
  }

  .rec-text {
    margin: 25px;
    padding: 60px 10px 0px 10px;
  }
}

